--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==1.8.18
+Django==1.11.15
 django-extensions==2.1.0
 SQLAlchemy==1.2.10
 django_select2==6.1.2
-django-filter==2.0.0
+django-filter==1.1.0
+django-tables2==1.21.2
