--- a/configs/uwsgi.ini
+++ b/configs/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 socket = 127.0.0.1:8005
-chdir = "/home/ubuntu/dbhub/"
+chdir = "/data/www/dbhub/"
 wsgi-file = dbhub/wsgi.py
 master = true
 processes = 2
