--- a/configs/uwsgi.ini
+++ b/configs/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 socket = 127.0.0.1:8005
-chdir = "/data/www/dbhub/"
+chdir = /data/www/dbhub/
 wsgi-file = dbhub/wsgi.py
 master = true
 processes = 2
@@ -9,5 +9,5 @@ limit-as = 1000
 max-requests = 5000
 single-interpreter = true
 enable-threads = true
-env = DJANGO_SETTINGS_MODULE="project.settings.prod"
-virtualenv = "/home/ubuntu/.virtualenvs/dbhub"
+env = DJANGO_SETTINGS_MODULE=dbhub.settings.prod
+virtualenv = /home/ubuntu/.virtualenvs/dbhub
