--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ django-tables2==1.21.2
 MySQL-python==1.2.5
 uwsgi==2.0.17.1
 git+ssh://git@github.com/huifenqi/python-libs.git@0.0.9
+git+ssh://git@github.com/bastionhost/django-admin-oauth2.git
