--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 Django==1.11.14
 django-extensions==2.1.0
 SQLAlchemy==1.2.10
-django_select2==6.1.2
+django-autocomplete-light==3.2.10
 django-filter==1.1.0
 django-tables2==1.21.2
 MySQL-python==1.2.5
 uwsgi==2.0.17.1
-git+ssh://git@github.com/huifenqi/python-libs.git@0.0.9
 git+ssh://git@github.com/bastionhost/django-admin-oauth2.git
