--- a/configs/supervisor.ini
+++ b/configs/supervisor.ini
@@ -1,7 +1,7 @@
-[program:{project_name}]
+[program:dbhub]
 environment = NEW_RELIC_CONFIG_FILE=/data/www/%(program_name)s/configs/newrelic.ini
 directory = /data/www/%(program_name)s/configs
-command = newrelic-admin run-program /usr/local/bin/uwsgi --ini uwsgi-%(program_name)s.ini
+command = newrelic-admin run-program /usr/local/bin/uwsgi --ini uwsgi.ini
 autostart = true
 autorestart = true
 stopsignal = QUIT
